[project]
name = "robot-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "myst-parser>=4.0.1",
    "sphinx>=8.2.3",
    "sphinx-comments>=0.0.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
    "sphinx-rtd-theme>=3.0.2",
    "sphinx-tabs>=3.4.7",
    "sphinx-togglebutton>=0.3.2",
]
